styles email/phone

--- a/less/styles.less
+++ b/less/styles.less
@@ -184,7 +184,8 @@ body {
 	overflow: hidden;
 
 	.header--email { display: none; }
-
+	.header--phone { display: none; }
+	
 	.header--full-name {
 		position: relative;
 		margin-top: 60px;
@@ -407,7 +408,8 @@ body {
 		font-size: 90%;
 	}
 
-	.header .header--email {
+	.header .header--email,
+	.header .header--phone {
 		display: block;
 	}
 
